# devtools

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  pyproject.toml  vcpkg.json
tests/: .coveragerc  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  __init__.py  codecov.yml  conftest.py  pytest.ini  requirements-dev.txt  requirements.txt
tests/benchmarks/: README.md  __init__.py
tests/benchmarks/atoms/: atoms_benchmarks.c  atoms_benchmarks.h
tests/benchmarks/c/: CMakeLists.txt  test_performance_benchmarks.c
tests/benchmarks/concurrency/: load_test.py
tests/benchmarks/cupolas/: benchmark_cupolas.c  test_stress_concurrent.c
tests/benchmarks/python/: __init__.py  benchmark_p3_13.py  benchmark_performance.py  regression_detector.py
tests/contract/: README.md  __init__.py
tests/contract/python/: __init__.py  contract_test_generator.py  test_agent_contracts.py  test_skill_contracts.py
tests/integration/: README.md  __init__.py  smoke_test_daemon.py
tests/integration/c/: CMakeLists.txt  memory_compat.h  test_c_link_01_manager_loop.c  test_c_link_02_llm_loop.c  test_c_link_03_market_openlab.c  test_c_link_04_tool_loop.c  test_c_link_05_safety_tool.c  test_c_link_06_orchestrator_loop.c  test_c_link_07_checkpoint_loop.c  test_c_link_08_service_discovery.c  test_c_link_09_ipc_bus.c  test_c_link_10_monit_prometheus.c  test_c_link_11_gateway_forward.c  test_c_link_12_memoryrovol_bridge.c  test_coreloop_latency.c  test_credential_latency.c  test_cupolas_audit_chain.c  test_cupolas_chain.c  test_cupolas_credentials.c  test_cupolas_latency.c  test_e2e_core.c  test_heapstore_e2e.c  test_hook_system.c  test_llm_d_complexity.c  test_llm_d_routing.c  test_llm_d_routing_latency.c  test_memoryrov_clustering.c  test_memoryrov_e2e.c  test_memoryrov_embedding.c  test_memoryrov_graph.c  test_memoryrov_throughput.c  test_protocol_compatibility.c  test_protocol_e2e.c  test_thinkdual_e2e.c  test_thinkdual_latency.c  test_thinkdual_metacog.c  test_thinkdual_semantic.c  test_thinkdual_tsan.c
tests/integration/c/data/: README.md
tests/integration/commons/: test_common_integration.c  test_unified_modules.c
tests/integration/coreloopthree/: test_cognition_execution.py
tests/integration/cupolas/: test_cupolas_integration.c
tests/integration/memoryrovol/: test_layers.py
tests/integration/platform/c/: CMakeLists.txt  test_mkdir_recursive.c  test_platform_compat.c
tests/integration/python/: __init__.py  test_airymax_e2e.py  test_e2e_workflows.py  test_p3_20_migration.py  test_protocol_compatibility.py
tests/integration/syscall/: __init__.py  test_syscalls.py
tests/security/: README.md  __init__.py
tests/security/c/: CMakeLists.txt  test_sec017_compliance.c  test_security_audit.c
tests/security/cupolas/: fuzz_permission.c  fuzz_sanitizer.c
tests/security/python/: __init__.py  fuzz_framework.py  sast_dast_scanner.py  test_input_sanitizer.py  test_permissions.py  test_sandbox.py
tests/unit/: CMakeLists.txt  README.md  __init__.py
tests/unit/atoms/: test_common_utils.c
tests/unit/atoms/corekern/: test_corekern_extended.c  test_error.c  test_ipc.c  test_main.c  test_mem.c  test_task.c  test_time.c
tests/unit/atoms/coreloopthree/: CMakeLists.txt  benchmark.c  test_cognition.c  test_cognition_example.c  test_coordinator.c  test_coordinator_extended.c  test_execution.c  test_loop.c  test_main.c  test_majority.c  test_memory.c
tests/unit/atoms/memory/: test_memory_provider.c
tests/unit/atoms/syscall/: test_full_workflow.c  test_syscall_entry.c  test_syscall_extended.c  test_syscall_functional.c  test_syscall_integration.c  test_syscall_table.c
tests/unit/commons/unit/: CMakeLists.txt  core_test.c  io_test.c  test_config.c  test_cost.c  test_error.c  test_input_validator.c  test_ipc.c  test_logger.c  test_macros.h  test_network.c  test_observability.c  test_platform.c  test_resource_guard.c  test_string_utils.c  test_token.c  test_types.c
tests/unit/cupolas/unit/: test_audit_overflow.c  test_circuit_breaker.c  test_cupolas_config.c  test_cupolas_core.c  test_cupolas_metrics.c  test_cupolas_security.c  test_cupolas_signature.c  test_cupolas_vault.c  test_cupolas_workbench.c  test_sanitizer_cache.c
tests/unit/daemon/common/: test_config.c  test_error.c  test_input_validator.c  test_ipc_client.c  test_jsonrpc_helpers.c  test_logger.c  test_platform.c  test_safe_string_utils.c  test_svc_auth.c
tests/unit/daemon/gateway_d/: test_gateway.c  test_gateway_rpc_handler.c  test_jsonrpc.c  test_service.c  test_syscall_router.c
tests/unit/daemon/llm_d/: test_cache.c  test_cost_tracker.c  test_llm.c  test_response.c  (+3 more)
tests/unit/heapstore/: benchmark_heapstore.c  test_batch_performance.c  test_edge_cases.c  test_fuzzing_concurrency.c  test_heapstore_batch.c  test_heapstore_core.c  test_heapstore_integration.c  test_heapstore_ipc.c  test_heapstore_log.c  test_heapstore_memory.c  test_heapstore_registry.c  test_heapstore_trace.c  test_security_path_traversal.c
tests/unit/manager/: __init__.py  run_all_tests.py  test_audit_log_validation.py  test_config_integration.py  test_config_syntax.py  test_drift_detector.py  test_schema_validation.py  test_validate_config.py
tests/unit/openlab/: __init__.py  conftest.py  test_agent.py  test_agents.py  test_dispatching.py  test_planning.py  test_storage.py  test_task.py  test_tool.py  test_videoedit.py
tests/unit/scripts/: test_plugin.py
tests/unit/toolkit/: __init__.py  base_test_case.py  test_agent.py  test_benchmark_performance.py  test_checkpoint.py  test_comprehensive.py  test_imports.py  test_managers.py  test_managers_extended.py  test_sdk_python.py  test_sdk_rust.py  test_task_manager_refactored.py
tests/unit/utils/: test_mock_factory.py
tests/utils/: README.md  __init__.py
tests/utils/python/: __init__.py  base_test.py  check_syntax.py  data_generator.py  data_manager.py  environment_validator.py  generate_combined_report.py  mock_factory.py  run_tests.py  test_helpers.py  test_isolation.py  test_quality_reporter.py
(+173 files in other folders)
