[tool.poetry]
name = "agentrt"
version = "0.1.0"
description = "AgentRT - Agent Runtime Platform"
authors = ["SPHARX Ltd. - Airymax Team"]
license = "AGPL-3.0-or-later OR Apache-2.0"
readme = "README.md"
homepage = "https://spharx.cn"
repository = "https://gitee.com/spharx/agentrt"
documentation = "https://docs.spharx.cn/agentrt"
keywords = ["agent", "os", "ai", "memory", "cognition", "execution", "microkernel", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
include = [
    "ecosystem/manager/*.yaml",
    "scripts/**/*.py",
    "agentos/manuals/**/*.md",
]

[tool.poetry.dependencies]
python = "^3.9"

# 核心依赖
numpy = "^1.21.0"
scipy = "^1.7.0"

# 向量和检索
faiss-cpu = "^1.7.4"
sentence-transformers = "^2.2.0"

# 数据处理
pandas = "^1.3.0"
pyarrow = "^10.0.0"

# HTTP 和 API
requests = "^2.26.0"
httpx = "^0.23.0"
aiohttp = "^3.8.0"

# 配置管理
pyyaml = "^6.0"
python-dotenv = "^0.19.0"

# 日志和监控
opentelemetry-api = "^1.12.0"
opentelemetry-sdk = "^1.12.0"
opentelemetry-exporter-otlp = "^1.12.0"

# 数据库
sqlite-utils = "^3.20"

# JSON 处理
orjson = "^3.8.0"

# 工具库
tqdm = "^4.62.0"
click = "^8.0.0"

# LLM 相关
tiktoken = "^0.3.0"

[tool.poetry.group.dev.dependencies]
# 测试
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.0"
pytest-benchmark = "^4.0.0"

# 代码质量
black = "^22.0.0"
isort = "^5.10.0"
flake8 = "^5.0.0"
mypy = "^0.990"
pylint = "^2.15.0"

# 预提交钩子
pre-commit = "^2.20.0"

# 文档
sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.0"

# 类型检查
types-requests = "^2.28.0"
types-PyYAML = "^6.0.0"

# 安全
bandit = "^1.7.0"
safety = "^2.0.0"

[tool.poetry.scripts]
agentrt-init = "scripts.init_config:main"
agentrt-docs = "scripts.generate_docs:main"
agentrt-benchmark = "scripts.benchmark:main"
agentrt-validate = "scripts.validate:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | atoms
  | daemon
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
skip = ["atoms", "daemon", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ["agentrt/atoms/", "agentrt/daemon/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = "faiss.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests/unit",
    "tests/integration",
]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["agentos"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]


